termine el login y el registro, falta adicionar el link de los demas usuarios

--- a/login.html
+++ b/login.html
@@ -36,6 +36,8 @@
                     <input class="boton_enviar_formulario" type="submit" value="Acceder">
                 </div> 
 
+                <a class="link_register_password" href="registro.html">Registrate</a>
+
             </form>
         </div>
     </div>
