--- a/instructor.html
+++ b/instructor.html
@@ -17,35 +17,59 @@
         <h1>A C A N N E R</h1>
         <nav id="menu">
             <ul>
-                <li><a>BLOG</a></li>
-                <li><a>ACTIVIDADES</a></li>
-                <li><a>NOTAS</a></li>
-                <li><a>ASISTENCIA</a></li>
-                <li><a>HORARIO</a></li>
-                <li><a><img src="IMAGENES/Perfil.png" width="50px"></a></li>
+                <li><a class="item_nav">BLOG</a></li>
+                <li><a class="item_nav">ACTIVIDADES</a></li>
+                <li><a class="item_nav">NOTAS</a></li>
+                <li><a class="item_nav">ASISTENCIA</a></li>
+                <li><a class="item_nav">HORARIO</a></li>
+                <li><a><img src="imagenes/Perfil.png" width="50px"></a></li>
             </ul>
         </nav>
     </header>
-    <nav class="Titulo">
-        <h1>
+    <div class="container_instructor">
+        <h1 class="title_container">
             BIENVENIDO INSTRUCTOR
         </h1>
-        <div class="sub">
-            <h3>
-                FORMACION ADSO
-            </h3>
+
+        <div class="column_container_instructor">
+            <div class="paragraph_column column_container">
+                <h2 class="title_paragraph_column"> FORMACIÓN ADSO </h2>
+                <p class="text_paragraph_column">Bienvenido a ACANNER una plataforma que te va a facilitar el manejo de tu tiempo, tendras una mejor organizacion en tus actividades y estamos vinculados con el SENA (SERVICIO NAICONAL DE APRENDIZAJE)
+                </p>
+            </div>
+
+            <div class="img_column column_container">
+                <img class="img_container_instructor" src="IMAGENES/software.png" width="270px">
+            </div>
         </div>
-        <div class="texto">
-            <p>Bienvenido a ACANNER una plataforma que te va a facilitar el manejo de tu tiempo, tendras una mejor
-            <br>organizacion en tus actividades y estamos vinculados con el SENA (SERVICIO NAICONAL DE APRENDIZAJE)
-            </p>
+
+    </div>
+    <!-- <div class="container_instrucor">
+        <h1 class="titulo_nav">
+            BIENVENIDO INSTRUCTOR
+        </h1>
+        
+        <div class="info_container">
+            
+            <div class="texto column_info_container" >
+                <h3 class="sub">
+                    FORMACION ADSO
+                </h3>
+                <p>Bienvenido a ACANNER una plataforma que te va a facilitar el manejo de tu tiempo, tendras una mejor organizacion en tus actividades y estamos vinculados con el SENA (SERVICIO NAICONAL DE APRENDIZAJE)
+                </p>
+            </div>
+
+            <article class="proyecto">
+                <div>
+                    <img src="IMAGENES/software.png" width="270px">
+                </div>
+            </article>
+
         </div>
-    </nav>
-    <article class="proyecto">
-        <div>
-            <img src="IMAGENES/software.png" width="270px">
-        </div>
-    </article>
+
+
+    </div> -->
+
 
 </body>
 </html>
