Se corrigieron cosas del index y modificaron estilos

--- a/Index.html
+++ b/Index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACANNER</title>
-    <link rel="icon" href="IMG\Acanner.png">
-    <link rel="stylesheet" href="CSS\Index.css">
+    <link rel="icon" href="img\Acanner.png">
+    <link rel="stylesheet" href="css\Index.css">
 </head>
 <body>
     <header>
         <div class="Logo"> 
-            <img class="imagen_1" src="IMG\Acanner.png" alt="logo _proyecto">
-            <img class="imagen_2" src="IMG\Acanner_Nombre.png" alt="Nombre_pro">
+            <img class="imagen_1" src="img\Acanner.png" alt="logo _proyecto">
+            <img class="imagen_2" src="img\Acanner_Nombre.png" alt="Nombre_pro">
         </div>
         <nav>
             <a href="" class="link-nav"><strong>Login</strong></a>
@@ -20,14 +20,21 @@
         </nav>
     </header>
 
-    <div class="contenedor">
-        <figure>
-            <img src="IMG\Programacio2.0.jpeg" alt="">
-            <div class="capa">
-                <h1>Tu Sistema Web Academico</h1>
-                <p>Explora tus Cursos, Notas, Anuncios y Asistencia.</p>
-            </div>
-        </figure>
+    <div class="container">
+        <div class="background_wrapper">
+            <img class="background_container" src="./img/background.jpg" alt="background">
+        </div>
+        
+
+        <div class="animation">
+            <figure>
+                <div class="capa">
+                    <h1>Tu Sistema Web Academico</h1>
+                    <p>Explora tus Cursos, Notas, Anuncios y Asistencia.</p>
+                </div>
+            </figure>
+        </div>
+
     </div>
 
 </body>
