Se junto rama allison y rama katalina

--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
             <h2 class="title_right_section">
                 Bienvenido!
             </h2>
-            <form class="form_right_section" action="#">
+            <form class="form_right_section" action="Aprendiz.html">
                 <div class="right_section_form_inputs">
                     <div class="input-container">
                         <i class="fas fa-envelope icono"></i>
