Se hizo merge de la rama sergio a la rama main

--- a/Index.html
+++ b/Index.html
@@ -15,8 +15,8 @@
             <img class="imagen_2" src="img\Acanner_Nombre.png" alt="Nombre_pro">
         </div>
         <nav>
-            <a href="" class="link-nav"><strong>Login</strong></a>
-            <a href="" class="link-nav"><strong>Registro</strong></a>
+            <a href="login.html" class="link-nav"><strong>Login</strong></a>
+            <a href="registro.html" class="link-nav"><strong>Registro</strong></a>
         </nav>
     </header>
 
