--- a/cuartoTrimestre/login.html
+++ b/cuartoTrimestre/login.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="container">
-        <div class="row">
+        <div class="row col-12">
             <div class="col-12 col-md-6 left_section section_login">
                 <img class="image_login" src="imagenes/logo en blanco.png" alt="Logo">
             </div>
