modulo de autentitación completo

--- a/cuartoTrimestre/login.html
+++ b/cuartoTrimestre/login.html
@@ -21,15 +21,15 @@
                     Bienvenido! 
                 </h2> 
                 
-                <form class="form_right_section" action="#">
+                <form class="form_right_section" action="php/login.php" method="post">
                     <div class="right_section_form_inputs">
                         <div class="input-container">
                             <i class="fas fa-envelope icono"></i>
-                            <input class="input_form_login" type="email" placeholder="Email">
+                            <input class="input_form_login" type="email" placeholder="Email" name="correo">
                         </div>
                         <div class="input-container">
                             <i class="fa-solid fa-unlock icono"></i>
-                            <input class="input_form_login" type="password" placeholder="Password">
+                            <input class="input_form_login" type="password" placeholder="Password" name="password">
                         </div>
                     </div>
                     
