--- a/cuartoTrimestre/instructor.html
+++ b/cuartoTrimestre/instructor.html
@@ -45,11 +45,9 @@
                 <a class="nav-link" href="blog.html">Blog</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="actividades.html">Actividades</a>
+                <a class="nav-link" href="actividades.html">Guias</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="notas.html">Notas</a>
-              </li>
+            
               <li class="nav-item">
                 <a class="nav-link" href="asistencia.html">Asistencia</a>
               </li>
